[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchlings]
sdist = true
wheel = true
requirements = ["requirements.txt"]
scripts = ["bin/myscript.py"]

[project]
name = "isitoff"
version = "0.1.0"
authors = [
  { name="Manni Moghimi", email="mannimoghimi@gmail.com" },
]
description = "A package for event and holiday identification in the Persian calendar."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "dotmap>=1.3.30",
  "requests>=2.29.0",
  "jdatetime>=4.1.1",
]

[project.urls]
"Homepage" = "https://github.com/Manni-MinM/isitoff"
"Bug Tracker" = "https://github.com/Manni-MinM/isitoff/issues"
